--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,9 +8,16 @@
     </p>
 </head>
 <body>
+<div th:if="${invalidCredentials}" style="background: red";>
+    Sorry, <span th:text="${loginForm.username}">[username]</span>, wrong password or username!
+</div>
     <form th:action="@{/login}" th:object="${loginForm}" method="post">
         <p>Username: <input type="text" th:field="*{username}"/></p>
+        <p style="background-color:orangered" th:if="${#fields.hasErrors('username')}"
+           th:errors="*{username}"></p>
         <p>Password <input type="password" th:field="*{password}"/></p>
+        <p style="background-color:orangered" th:if="${#fields.hasErrors('password')}"
+           th:errors="*{password}"></p>
         <p><input type="submit" value="Submit"/></p>
     </form>
 </body>
